# libsapling

./: .gitignore  CHANGELOG  CMakeLists.txt  Makefile  Makefile.am  README.md  chart.gv  configure.ac  index.html  lexer bugs  run_tests.sh  to_dot.sh
docs/: index.html  lib.gv  reab.gv
docs/maintainers/: CODING_STYLE.md  DESIGN_FLAWS.md  Doxyfile  MAINPAGE.md  TOOLS.md
docs/maintainers/charts/: dm.gv  lib.gv  newchart.gv  rea_impl.gv
docs/maintainers/html/: dir_0b51727d80b21dd5e544de212c8122ad.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen.css  files.html  first__out__buffer_8h.html  first__out__buffer_8h_source.html  globals.html  globals_defs.html  index.html  md_CODING_STYLE.html  md_DESIGN_FLAWS.html  md_MAINPAGE.html  md_TOOLS.html  pages.html
docs/maintainers/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  defines_0.js  defines_1.js  files_0.js  pages_0.js  pages_1.js  pages_2.js  search.css  searchdata.js
docs/users/: Doxyfile  MAINPAGE.md  TYPED_INTERFACES.md
docs/users/html/: _0cc-example.html  _0dc-example.html  action__table_8h.html  action__table_8h_source.html  annotated.html  avl_8h.html  avl_8h__dep__incl.map  avl_8h__dep__incl.md5  avl_8h__incl.map  avl_8h__incl.md5  avl_8h_source.html  classes.html  closure_8h.html  closure_8h_source.html  common__impl__stack__queue_8h_source.html  common__impl__typed__stack__queue_8h.html  common__impl__typed__stack__queue_8h__dep__incl.map  common__impl__typed__stack__queue_8h__dep__incl.md5  common__impl__typed__stack__queue_8h_source.html  dir_000002_000003.html  dir_000006_000000.html  dir_000007_000000.html  dir_0796f9798ec24245caf83e15c10d7ed5.html  dir_0796f9798ec24245caf83e15c10d7ed5_dep.map  dir_0796f9798ec24245caf83e15c10d7ed5_dep.md5  dir_0b51727d80b21dd5e544de212c8122ad.html  dir_0b51727d80b21dd5e544de212c8122ad_dep.map  dir_0b51727d80b21dd5e544de212c8122ad_dep.md5  dir_125f8c8195c7c9ec60fbde11d89eac57.html  dir_125f8c8195c7c9ec60fbde11d89eac57_dep.map  dir_125f8c8195c7c9ec60fbde11d89eac57_dep.md5  dir_13e138d54eb8818da29c3992edef070a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_713db68d4287b18f2465a09161f02ce6.html  dir_713db68d4287b18f2465a09161f02ce6_dep.map  dir_713db68d4287b18f2465a09161f02ce6_dep.md5  dir_b845477738e89c86cc7f6f4a03834131.html  dir_b845477738e89c86cc7f6f4a03834131_dep.map  (+179 more)
docs/users/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  files_a.js  (+28 more)
include/: path.h  rea.h  stack.h  text.h
include/libsapling/: avl.h  graph.h  idiom.h  parse_tree.h  path.h  queue.h  rea.h  stack.h  terminal.h  trie.h  typed_stack.h
include/libsapling/cc/: lexer.h  parse_tree.h  production.h  terminal.h  text.h
include/libsapling/cc/parser/: action_table.h  closure.h  first.h  follow.h  goto.h  goto_table.h  grammar.h  lr0_item.h  slr.h
include/libsapling/cc/parser/aux/: production_set.h  set_of_lr0_items.h  set_of_sets_of_lr0_items.h  symbol_set.h
include/libsapling/cc/parser/defs/: set_of_sets_of_lr0_items.h
include/libsapling/dm/: avl.h  equivalence_class.h  graph.h  logic.h  path.h  queue.h  stack.h  trie.h
include/libsapling/dm/typed/: typed_adapters.h  typed_avl.h  typed_common.h  typed_equivalence_class.h  typed_first_out_buffer.h  typed_fpfdata_common.h  typed_path.h  typed_queue.h  typed_stack.h  typed_trie.h
src/: avl.c  avl.h  graph.c  parse_tree.c  path.c  queue.c  rea.c  stack.c  terminal.c  text.c  trie.c
src/cc/: parse_tree.c  production.c  terminal.c
src/cc/lexer/: lexer.c  lexer__to_string.c  lexer_accepting_states.c  lexer_accepting_states.h  lexer_attributed_edge.h  lexer_attributed_edges.c  lexer_attributed_edges.h  lexer_ec_def.h  lexer_edge_storage.h  lexer_insert_state.c  lexer_insert_state.h  lexer_minimize.c  lexer_minimize.h  lexer_replace_node.c  lexer_replace_node.h
src/cc/lexer/builders/: lexer_anything.c  lexer_class.c  lexer_copy.c  lexer_literal.c
src/cc/lexer/operators/: lexer_concatenation.c  lexer_kleene_plus.c  lexer_kleene_star.c  lexer_union.c
src/cc/parser/: action_table.c  closure.c  first.c  follow.c  goto.c  goto_table.c  grammar.c  lr0_item.c  slr.c
src/cc/parser/aux/: set_of_lr0_items.c  set_of_sets_of_lr0_items.c  symbol_set.c
src/cc/parser/defs/: set_of_lr0_items.c  set_of_sets_of_lr0_items.c  symbol_set.c
src/dm/: avl.c  equivalence_class.c  first_out_buffer.h  graph.c  path.c  queue.c  stack.c  trie.c
src/dm/typed/: typed_common.c
test/: avl_test.c  equivalence_class_test.c  fpfdata_test.c  lexer_test.c  parse_tree_test.c  path_test.c  print_test.c  production_test.c  queue_test.c  rea_test.c  stack_test.c  terminal_test.c  test_utils.h  trie_test.c
test/cc/: lexer_test.c  parse_tree_test.c
test/cc/parser/: first_test.c  follow_test.c  grammar_test.c  parser_test_utils.c  slr_test.c
test/dm/: equivalence_class_test.c  path_test.c  queue_test.c  trie_test.c
test/parser/: first_test.c  follow_test.c  grammar_test.c  lr0_item_test.c  parser_test_utils.c  parser_test_utils.h  slr_test.c
tools/: Makefile.am.meta.sh  checkkstyle  cloc_lib  gen_lexer_test_html  locreport  macroslash  macroslash.c  source_expansion.sh  update_docs  viz  viz_all_tests
